# Game

./: .gitmodules  CMakeLists.txt
config/: Archer.json  Archer.txt  Battle.json  Config.json  Config.txt  Damager.json  Damager.txt  Enemy1.json  Enemy1.txt  Tank.json  Tank.txt  Wisard.json  Wisard.txt
demo/: main.cpp
include/: battle_graphics.hpp  character.hpp  enemy.hpp  main_menu.hpp
sources/: battle_animation.cpp  battle_drowing.cpp  battle_graphics.cpp  battle_load.cpp  character.cpp  enemy.cpp  main_menu.cpp
